# familyInvite.yaml
appId: com.media4care.family
tags: 
  - regression
---
- runFlow: subflows/login.yml
- runScript: ../scripts/utils.js
- tapOn: Settings
- tapOn:
    text: Families
    index: 1
- tapOn:
    text: Familiengruppe
    index: 1
- tapOn:
    point: 93%,57%
- tapOn: Email Address
- inputText: ${output.credentials.email}
- tapOn: Send invitation
- assertVisible:
    text: Invitation was sent.
    index: 1
- scrollUntilVisible:
    element: ${output.credentials.email}
    direction: DOWN
- assertVisible:
    text: ${output.credentials.email}
    index: 1