# Login.yaml

appId: com.media4care.family
---
- clearState  
- launchApp
- tapOn: Email Address
- inputText: ${MAESTRO_EMAIL}
- tapOn: Password
- inputText: ${MAESTRO_PASSWORD}
- tapOn: Login
- runFlow:
    when:
      visible: Skip
    file: skip.yml
